# Swarm

./: .dockerignore  .env.docker.example  .env.example  .gitignore  DEEP_READ_REGISTER_2026-07-07.md  DESIGN_complex_task_execution.md  DESIGN_fact_foundation.md  DESIGN_multiworker_collaboration.md  DESIGN_plan_batch_decompose.md  DESIGN_requirement_translation.md  DESIGN_stepwise_execution_B2_B3.md  Dockerfile  E2E_PROBLEMS_996_round11.md  E2E_PROBLEMS_996_round12.md  PROJECT_STATUS.md  README.md  README_EN.md  ROUND63_POSTMORTEM_TREATMENT_REGISTER.md  ROUND64_POSTMORTEM_TREATMENT_REGISTER.md  ROUND65_POSTMORTEM_TREATMENT_REGISTER.md  TECH_DEBT.md  WALKTHROUGH_REPORT.md  __init__.py  _baseline.py  audit.py  docker-compose.yml  git_base.py  logging_config.py  paths.py  pyproject.toml  setup.sh  task_states.py  test_cn_keywords.py  tracing.py  types.py
api/: __init__.py  _shared.py  app.py  auth.py  deps.py  notify.py  rate_limit.py
auth/: __init__.py  default_profile.py  passwords.py  rbac.py  store.py
brain/: __init__.py  acceptance_spec.py  baseline_candidates.py  context_log.py  contract_utils.py  gates.py  go_registry.py  graph.py  ingest.py  ingest_node.py  integration_review.py  l3_gitlab.py  learn_store.py  llm_schemas.py  manifest_synth.py  maven_registry.py  merge_engine.py  migration_verify.py  model_tier.py  nodes.py  npm_registry.py  plan_batch.py  plan_finisher.py  plan_inject.py  plan_validator.py  planning_nodes.py  prompts.py  requirements_extract.py  runner.py  scheduler.py  smoke_derive.py  stack_detect.py  state.py  symbol_provenance.py  symbol_surgery.py  vision_ingest.py
cli/: __init__.py
config/: __init__.py  command_blacklist_store.py  env_registry.py  sandbox_store.py  secret_store.py  settings.py  skill_store.py
cube-templates/: NODE_ENVD_FIX.md  README.md  build-and-create-templates.sh
cube-templates/dockerfiles/warmup/: Cargo.toml  go.mod  package.json  pom.xml  requirements.txt  settings.xml
docs/: ARCHITECTURE_ROADMAP.md  DESIGN_project_sandbox_prebake_source.md  DESIGN_task_0f93f1fc_fixes.md  Embed_Rerank_Config_Design.md  Multimodal_Ingestion_Design.md  Project_Scoped_Sandbox_Design.md  Q3_CubeSandbox_Caching_Report.md  Q4_Planning_Agent_Design.md  Sandbox_Template_Spec_Distribution_Design.md  Swarm_System.html  TEAM_TRIAL.md  ruoyi_dev_guide.md
experience/: __init__.py  injector.py  library.py  models.py  selector.py  service.py  tools.py  validation.py
infra/: __init__.py  checkpoint_gc.py  coordination.py  db.py  degrade.py  redis_client.py  scheduler_leadership.py  worker_dispatcher.py
knowledge/: __init__.py  behavior_store.py  consistency.py  embed_client.py  embed_rerank_config.py  event_bus.py  hooks.py  hybrid.py  mr_history.py  norms_extractor.py  norms_inference.py  norms_store.py  readiness.py  reranker.py  retriever.py  scheduler.py  semantic_index.py  service.py  structure_index.py  updater.py
memory/: __init__.py  consolidate.py  decay.py  layers.py  pattern_extractor.py  profile.py  session.py  sliding_window.py  store.py  task_digest.py
models/: __init__.py  breaker.py  capability_store.py  cassette_playback.py  cassette_record.py  degeneration.py  errors.py  ledger.py  prober.py  router.py  usage_tracker.py
observability/: __init__.py  clickhouse.py
project/: __init__.py  codegraph.py  diff_apply.py  models.py  preprocess.py  sandbox_spec.py  store.py
scripts/: BACKUP_RESTORE.md  __init__.py  a2_sandbox_boundary_probe.py  backup.sh  benchmark_accept_rate.py  cassette_extract.py  cassette_replay.py  e2e-dotenv-flow.py  e2e_env_check.sh  e2e_mirrors.sh  e2e_purge_project_knowledge.py  e2e_smoke.py  e2e_soak_probe.sh  e2e_three_clean.sh  e2e_triple_watch.sh  init_db.py  model_swap_audit.py  plan_inject_submit.py  probe_local_concurrency.py  restart-api.sh  run_milestone_check.sh  start-services.sh  stop-api.sh  test_e2e_watch_stall.sh
skills_library/: README.md  api-design.md  backend-patterns.md  coding-standards-core.md  content-hash-cache-pattern.md  cost-aware-llm-pipeline.md  cpp-coding-standards.md  database-migrations.md  deployment-patterns.md  django-patterns.md  django-security.md  docker-patterns.md  e2e-testing.md  error-handling.md  fastapi-patterns.md  frontend-patterns.md  git-workflow.md  golang-patterns.md  golang-testing.md  hexagonal-architecture.md  java-2fa-totp-shiro.md  java-coding-standards.md  jpa-patterns.md  kotlin-coroutines-flows.md  kotlin-patterns.md  kubernetes-patterns.md  laravel-patterns.md  maven-build-lifecycle.md  maven-dependency-management.md  maven-plugin-configuration.md  mysql-patterns.md  nestjs-patterns.md  postgres-patterns.md  prisma-patterns.md  python-patterns.md  python-testing.md  react-patterns.md  react-performance.md  react-testing.md  redis-cache-conventions.md  (+9 more)
test/: conftest.py  run_all.sh  swarm_bootstrap.py  test_0f93f1fc_closed_loop.py  test_a1_checkpointer_fallback.py  test_a1_contract_attribution_monotonic.py  test_a1_delete_scope_gate.py  test_a1_pg_checkpointer.py  test_a1_sandbox_isolation.py  test_a1_scheduler_leadership.py  test_a2_command_blacklist.py  test_a2_isolation_cleanup.py  test_a2_sandbox_rbac.py  test_a2_token_gate_no_terminal_prewrite.py  test_a2_tsc_failclosed.py  test_a3_pullback_incomplete_gate.py  test_a4_derive_build_sandbox_manifest.py  test_a4_retry_guidance.py  test_a5_gate_budget_guard.py  test_a6_atomic_pullback_write.py  test_a7_scan_cache.py  test_a7_verify_timeout_marker.py  test_a8_extra_whitelist_compile_tests.py  test_accept_phase_s2_5.py  test_acceptance_feedback_s2_6.py  test_acceptance_spec_s2_4.py  test_adversarial_verify_t1.py  test_after_assess_enum_normalized_round22.py  test_after_monitor_dispatch_fuse.py  test_allow_any_writers_a5.py  test_api_status_qdrant_probe.py  test_apply_diff_trailing_newline.py  test_assess_no_downgrade_2e187366.py  test_audit_extraction.py  test_audit_group1_s1_h1.py  test_audit_group2_security.py  test_audit_group3_reliability.py  test_audit_milestone_scope_round22.py  test_auth_login.py  (+614 more)
(+226 files in other folders)
