[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swarm"
version = "0.9.24"
description = "蜂群 AI 编程智能体系统"
requires-python = ">=3.11"
license = {text = "MIT"}
readme = "README.md"

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sse-starlette>=1.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "json-repair>=0.30",  # LLM JSON 输出鲁棒解析(缺逗号/尾逗号/截断)，治本欠规划假成功
    "langchain>=0.2",
    "langchain-openai>=0.1",
    "langgraph>=1.0",
    "langgraph-checkpoint-postgres>=2.0",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.0",
    "qdrant-client>=1.7",
    "fastembed>=0.7",
    "e2b-code-interpreter>=2.0",
    "click>=8.1",
    "rich>=13.0",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "python-multipart>=0.0.9",
    "cryptography>=42",
    "paramiko>=3.4",
    # W2.3：tree-sitter 多语言语义切分（Java/TS/JS/Go）。grammar 缺失时切分会优雅回退
    # 字符切兜底，故视为软依赖——但默认安装以保证 KB 对 Java 重项目(RuoYi)的嵌入质量。
    "tree-sitter>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-go>=0.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]

[project.scripts]
swarm = "swarm.cli:main"
swarm-web = "swarm.api.app:run"

[tool.setuptools]
packages = [
    "swarm",
    "swarm.api",
    "swarm.api.routers",
    "swarm.auth",
    "swarm.brain",
    "swarm.brain.nodes",
    "swarm.cli",
    "swarm.config",
    "swarm.infra",
    "swarm.infra.migrations",
    "swarm.knowledge",
    "swarm.knowledge.ingest",
    "swarm.memory",
    "swarm.models",
    "swarm.observability",
    "swarm.project",
    "swarm.scripts",
    "swarm.tools",
    "swarm.worker",
]

# round24 F4（评估结论=WONTFIX）：`"swarm"="."` 让仓库根即 swarm 包根（顶层 brain/worker/
# api/... 直接是 swarm.brain/...）。此少见布局是 [tool.pyright] reportMissingImports="none"
# 的根源（pyright 跟不上该映射）。规整到标准 src/swarm/ 布局需把所有顶层包挪进 swarm/ 并同步
# CI/Docker/scripts/package-data 的路径引用——大面积机械改动，收益仅"去掉一个 pyright 变通"，
# 对已跑通系统风险≫收益。故不动，文档标注；未来若做 src-layout 迁移，import(已是 swarm.X)不变、
# 只需搬目录 + 改本处映射为 "swarm"="src/swarm"。
[tool.setuptools.package-dir]
"swarm" = "."

# 打包非 .py 资源：WebUI 静态文件（HTML/JS/CSS）必须随包安装，否则容器内
# （正式 install，非 editable）Web 界面 404。scripts 同理供运行时引用。
[tool.setuptools.package-data]
"swarm.api" = ["static/**/*", "static/*"]

[tool.setuptools.exclude-package-data]
"*" = ["__pycache__/*", "*.pyc"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
norecursedirs = ["legacy", "sandbox", ".venv", "__pycache__"]
addopts = "-q --import-mode=importlib"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pyright]
# 宽松模式：项目大量使用运行时动态导入（swarm.* 包通过 editable install 解析），
# 静态分析的 missing-import 多为误报。仅作开发期辅助，不阻断 CI。
include = ["swarm", "api", "auth", "brain", "cli", "config", "infra", "knowledge", "memory", "models", "project", "tools", "worker"]
exclude = ["**/__pycache__", ".venv", "test/legacy", "test/sandbox"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = "none"
reportAttributeAccessIssue = "warning"
