[package]
name = "dep-warmup"
version = "1.0.0"
edition = "2021"

# 预热常用 crate 进 cargo cache（沙箱克隆后 cargo build 免下载）。按需增删。
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["full"] }
axum = "0.7"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql"] }
